--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Quỳnh Giao</a>.
+      Coded by <a href="https://github.com/giaonnq1401">Quỳnh Giao</a>.
     </p>
   </footer>
 </body>
